--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,5 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    test twig
+    <div class="container">
+        <div class="row">
+            {% for blog in blogs %}
+                <div class="col-md-4">
+                    <h2>{{ blog.title }}</h2>
+                    <p>{{ blog.content }}</p>
+                    <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
