--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Welcome to Blog!{% endblock %}</title>
 
         <link rel="stylesheet" href="{{ asset('build/vendor.css') }}">
@@ -24,7 +25,8 @@
                             <a class="nav-link" href="{{ path('blog_add') }}">New blog</a>
                         </li>
                     </ul>
-                    <a class="nav-link btn btn-outline-info" href="{{ path('blog_add') }}">Sign in</a>
+                    {#{% if is_granted() %}#}
+                    <a class="nav-link btn btn-outline-info" href="{{ path('app_login') }}">Sign in</a>
                     <a class="ml-1 nav-link btn btn-info" href="{{ path('blog_add') }}">Register</a>
                 </div>
             </div>
