--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,9 +20,11 @@
                         {#<li class="nav-item active">#}
                             {#<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
                         {#</li>#}
+                        {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('blog_add') }}">New blog</a>
                         </li>
+                        {% endif %}
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         {% if is_granted('ROLE_USER') %}
@@ -32,11 +34,8 @@
                                     {{ app.user.firstname }}
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    {#<a class="dropdown-item" href="{{ path('app_account') }}">Profile</a>#}
-                                    {% if is_granted('ROLE_ADMIN') %}
-                                        {#<a class="dropdown-item" href="{{ path('admin_article_new') }}">Create Post</a>#}
-                                    {% endif %}
-                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ path('app_account') }}">Profile</a>
+                                    <span class="dropdown-divider"></span>
                                     <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
                                 </div>
                             </li>
@@ -58,9 +57,6 @@
             <script src="{{ asset('build/runtime.js') }}"></script>
             <script src="{{ asset('build/vendor.js') }}"></script>
             <script src="{{ asset('build/js/app.js') }}"></script>
-            <script>
-                $('.dropdown-toggle').dropdown();
-            </script>
         {% endblock %}
     </body>
 </html>
