--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                         {#</li>#}
                         {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('blog_add') }}">New blog</a>
+                            <a class="nav-link" href="{{ path('article_add') }}">New blog</a>
                         </li>
                         {% endif %}
                     </ul>
