--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -7,11 +7,14 @@
                 <div class="col-md-4">
                     <h4>{{ article.title }}</h4>
                     <p>{{ article.content|truncate(100) }}</p>
-                    <p>
-                        <small class="text-info">{{ article.createdAt|date('d.m.Y') }}</small>
-                        Comments 0
-                        Watched 0
-                    </p>
+                    <div class="clearfix">
+                        <div class="text-info float-left">{{ article.createdAt|date('d.m.Y') }}</div>
+                        <div class="text-info float-right">
+                            <i class="fas fa-eye"></i> 0
+                            <i class="fas fa-comment"></i> 0
+                            <i class="fas fa-thumbs-up"></i> 0
+                        </div>
+                    </div>
                     <p><a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more »</a></p>
                 </div>
             {% else %}
