--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
     <div class="container">
-        <a href="{{ path('article_index') }}" class="btn btn-light">Back</a>
-        <a href="{{ path('article_edit', {id:article.id}) }}" class="btn btn-success">Edit</a>
+        {% if is_granted('EDIT', article) %}
+            <a href="{{ path('article_edit', {id:article.id}) }}" class="btn btn-outline-success"><i class="fas fa-pencil-alt"></i> Edit</a>
+        {% endif %}
         <hr>
         <h1>{{ article.title }}</h1>
         <p>
