--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -11,7 +11,7 @@
                         <div class="text-info float-left">{{ article.createdAt|date('d.m.Y') }}</div>
                         <div class="text-info float-right">
                             <i class="fas fa-eye"></i> 0
-                            <i class="fas fa-comment"></i> 0
+                            <i class="fas fa-comment"></i> {{ article.comments|length }}
                             <i class="fas fa-thumbs-up"></i> 0
                         </div>
                     </div>
@@ -21,6 +21,7 @@
                 <h2>No articles found</h2>
             {% endfor %}
         </div>
+        <hr>
         {{ knp_pagination_render(pagination) }}
     </div>
 {% endblock %}
