--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -6,11 +6,14 @@
     <div class="container">
         {% if is_granted('EDIT', article) %}
             <a href="{{ path('article_edit', {id:article.id}) }}" class="btn btn-outline-success"><i class="fas fa-pencil-alt"></i> Edit</a>
+            <hr>
         {% endif %}
-        <hr>
         <h1>{{ article.title }}</h1>
         <p>
             {{ article.content }}
+        </p>
+        <p>
+            {% include 'comment/index.html.twig' with {comments: article.comments} %}
         </p>
     </div>
 {% endblock %}
