--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,27 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container card p-4">
         <div class="row">
-            {% for article in pagination %}
-                <div class="col-md-4">
-                    <h4>{{ article.title }}</h4>
-                    <p>{{ article.content|truncate(100) }}</p>
-                    <div class="clearfix">
-                        <div class="text-info float-left">{{ article.createdAt|date('d.m.Y') }}</div>
-                        <div class="text-info float-right">
-                            <i class="fas fa-eye"></i> 0
-                            <i class="fas fa-comment"></i> {{ article.comments|length }}
-                            <i class="fas fa-thumbs-up"></i> 0
+            <div class="col-8">
+                <div class="row">
+                    {% for article in pagination %}
+                        <div class="col-md-12">
+                            <h3 class="font-weight-bold pb-2">
+                                <a href="{{ path('article_show', {slug:article.slug}) }}" class="text-black" style="text-decoration: none;color:#0b2e13">
+                                {{ article.title }}
+                                </a>
+                            </h3>
+                            <p>{{ article.content|truncate(400) }}</p>
+                            <div class="clearfix">
+                                <div class="text-info float-left">{{ article.createdAt|date('d.m.Y') }}</div>
+                                <div class="text-info float-right">
+                                    <i class="fas fa-eye"></i> 0
+                                    <i class="fas fa-comment"></i> {{ article.comments|length }}
+                                    <i class="fas fa-thumbs-up"></i> 0
+                                </div>
+                            </div>
+                            <p class="pb-4"><a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more »</a></p>
                         </div>
-                    </div>
-                    <p><a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more »</a></p>
+                    {% else %}
+                        <h2>No articles found</h2>
+                    {% endfor %}
                 </div>
-            {% else %}
-                <h2>No articles found</h2>
-            {% endfor %}
+                {{ knp_pagination_render(pagination) }}
+            </div>
+            <div class="col-4">
+                {% include 'sidebar.html.twig' %}
+            </div>
         </div>
-        <hr>
-        {{ knp_pagination_render(pagination) }}
     </div>
 {% endblock %}
