--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,26 +1,44 @@
 <div class="comments">
-    <div class="comments__header">
+    <div class="comments__header pb-3">
         <div class="clearfix">
             <h4 class="float-left text-primary">Comments</h4>
-            <h6 class="float-right text-muted">{{ comments|length }} comments <a href="#" class="btn btn-sm btn-outline-success"><i class="fas fa-comment"></i> add comment</a></h6>
+            <h6 class="float-right text-muted">{{ comments|length }} comments</h6>
         </div>
+        {{ form_start(commentForm) }}
+        <div class="d-flex">
+            <div class="w-100">
+                {{ form_widget(commentForm) }}
+            </div>
+            <div class="pl-2">
+                <button type="submit" class="btn btn-outline-success float-right d-block"><i class="fas fa-plus-circle"></i> Send</button>
+            </div>
+        </div>
+        {{ form_end(commentForm) }}
     </div>
-    <hr>
     <div class="comments__list">
         {% for comment in comments %}
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="#">
-                        <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/200x200" alt="">
-                    </a>
+            <div class="d-flex">
+                <div class="pr-3">
+                    <img class="img-fluid rounded-circle" src="//i.pravatar.cc/5{{ random(5) }}">
                 </div>
-                <div class="col-md-11">
+                <div class="w-100">
                     <div class="clearfix">
                         <h5 class="float-left media-heading user_name">{{ comment.owner.firstname }}</h5>
                         <p class="float-right text-info small">{{ comment.createdAt|ago }}</p>
                     </div>
                     <p class="text-success">{{ comment.text }}</p>
-                    <p class="small"><a href="#">Like</a> - <a href="#">Share</a></p>
+                    <div class="clearfix">
+                        <div class="float-left">
+                            <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+                                <a href="#" class="btn btn-sm btn-success"><i class="fas fa-thumbs-up"></i> 0</a>
+                                <a href="#" class="btn btn-sm btn-danger"><i class="fas fa-thumbs-down"></i> 0</a>
+                            </div>
+                        </div>
+                        <div class="float-right">
+                            <a href="#" class="btn btn-sm btn-outline-info px-4"><i class="fas fa-reply"></i></a>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </div>
         {% endfor %}
