--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,21 @@
 body {
     background-color: #efefefad;
 }
+
+ul.icons-inline {
+    display: inline-block;
+    list-style: none;
+    > li {
+        display: inline-block;
+        padding: 0 8px;
+        border-right: 1px solid #b1dfbb;
+
+        &:last-child {
+            border-right: 0;
+        }
+
+        > span {
+            padding-left: 8px;
+        }
+    }
+}
