--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -6,22 +6,26 @@
             <div class="col-8">
                 <div class="row">
                     {% for article in pagination %}
-                        <div class="col-md-12">
+                        <div class="col-md-12 pb-4">
                             <h3 class="font-weight-bold pb-2">
                                 <a href="{{ path('article_show', {slug:article.slug}) }}" class="text-black" style="text-decoration: none;color:#0b2e13">
-                                {{ article.title }}
+                                    {{ article.title }}
                                 </a>
                             </h3>
                             <p>{{ article.content|truncate(400) }}</p>
                             <div class="clearfix">
-                                <div class="text-info float-left">{{ article.createdAt|date('d.m.Y') }}</div>
-                                <div class="text-info float-right">
-                                    <i class="fas fa-eye"></i> 0
-                                    <i class="fas fa-comment"></i> {{ article.comments|length }}
-                                    <i class="fas fa-thumbs-up"></i> 0
+                                <div class="float-left">
+                                    <a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more&nbsp;&nbsp;<i class="fa fa-angle-double-right"></i></a>
+                                </div>
+                                <div class="float-right">
+                                    <ul class="icons-inline text-info small">
+                                        <li>{{ article.createdAt|date('d.m.Y') }}</li>
+                                        <li><i class="fas fa-eye"></i><span>0</span></li>
+                                        <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
+                                        <li><i class="fas fa-thumbs-up"></i> 0</li>
+                                    </ul>
                                 </div>
                             </div>
-                            <p class="pb-4"><a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more »</a></p>
                         </div>
                     {% else %}
                         <h2>No articles found</h2>
