--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -30,8 +30,8 @@
                     <div class="clearfix">
                         <div class="float-left">
                             <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                <a href="#" class="btn btn-sm btn-success"><i class="fas fa-thumbs-up"></i> 0</a>
-                                <a href="#" class="btn btn-sm btn-danger"><i class="fas fa-thumbs-down"></i> 0</a>
+                                <a href="#" class="btn btn-sm btn-outline-success"><i class="fas fa-thumbs-up"></i> 0</a>
+                                <a href="#" class="btn btn-sm btn-outline-danger"><i class="fas fa-thumbs-down"></i> 0</a>
                             </div>
                         </div>
                         <div class="float-right">
