--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -22,7 +22,7 @@
                                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
                                         <li><i class="fas fa-eye"></i><span>0</span></li>
                                         <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
-                                        <li><i class="fas fa-thumbs-up"></i> 0</li>
+                                        <li><i class="fas fa-thumbs-up"></i> {{ article.likes }}</li>
                                     </ul>
                                 </div>
                             </div>
@@ -31,7 +31,10 @@
                         <h2>No articles found</h2>
                     {% endfor %}
                 </div>
-                {{ knp_pagination_render(pagination) }}
+                {{ knp_pagination_render(pagination, null, {}, {
+                    'position': 'centered',
+                    'rounded': true
+                }) }}
             </div>
             <div class="col-4">
                 {% include 'sidebar.html.twig' %}
