--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -28,9 +28,9 @@
                     {{ article.content }}
                 </p>
                 <div class="d-flex justify-content-center">
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                        <a href="#" class="btn btn-sm btn-outline-success"><i class="fas fa-thumbs-up"></i> 0</a>
-                        <a href="#" class="btn btn-sm btn-outline-danger"><i class="fas fa-thumbs-down"></i> 0</a>
+                    <div class="btn-group btn-group-toggle js-like">
+                        <a href="{{ path('article_like', {id: article.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ article.likes }}</span></a>
+                        <a href="{{ path('article_dislike', {id: article.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ article.dislikes }}</span></a>
                     </div>
                 </div>
                 <div class="pt-3">
@@ -42,4 +42,30 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $(document).ready(function () {
+            $('.js-like-btn').on('click', function (e) {
+                e.preventDefault();
+
+                let $this = $(this),
+                    $btnGroup = $this.closest('.js-like'),
+                    $like = $btnGroup.find('[data-type="1"] span'),
+                    $dislike = $btnGroup.find('[data-type="-1"] span')
+                ;
+
+                $.get($this.attr('href')).then(function(data) {
+                    if (data.type === 'success') {
+                        $like.html(data.data.likes);
+                        $dislike.html(data.data.dislikes);
+                    } else {
+                        alert('Error');
+                    }
+                });
+            })
+        });
+    </script>
 {% endblock %}
