--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -29,9 +29,9 @@
                     <p class="text-success">{{ comment.text }}</p>
                     <div class="clearfix">
                         <div class="float-left">
-                            <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                <a href="#" class="btn btn-sm btn-outline-success"><i class="fas fa-thumbs-up"></i> 0</a>
-                                <a href="#" class="btn btn-sm btn-outline-danger"><i class="fas fa-thumbs-down"></i> 0</a>
+                            <div class="btn-group btn-group-sm js-like">
+                                <a href="{{ path('comment_like', {id: comment.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ comment.likes }}</span></a>
+                                <a href="{{ path('comment_dislike', {id: comment.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ comment.dislikes }}</span></a>
                             </div>
                         </div>
                         <div class="float-right">
