--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,7 @@ body {
 
 ul.icons-inline {
     display: inline-block;
+    padding: 0;
     list-style: none;
     > li {
         display: inline-block;
