implemented user profile - about me, articles, comments

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -10,7 +10,7 @@
                 <div class="clearfix py-2">
                     <div class="float-left">
                         <img class="img-fluid rounded-circle" src="//i.pravatar.cc/40">
-                        <a href="#">{{ article.author.firstname }}</a>
+                        <a href="{{ path('user_profile', {email:article.author.email}) }}">{{ article.author.firstname }}</a>
                     </div>
                     <div class="float-right">
                         {% if is_granted('EDIT', article) %}
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col-4">
-                {% include 'sidebar.html.twig' %}
+                {% include 'layout/sidebar.html.twig' %}
             </div>
         </div>
     </div>
