--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,21 +2,5 @@ body {
     background-color: #efefefad;
 }
 
-ul.icons-inline {
-    display: inline-block;
-    padding: 0;
-    list-style: none;
-    > li {
-        display: inline-block;
-        padding: 0 8px;
-        border-right: 1px solid #b1dfbb;
-
-        &:last-child {
-            border-right: 0;
-        }
-
-        > span {
-            padding-left: 8px;
-        }
-    }
-}
+@import 'helper';
+@import 'component';
