--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,40 +4,10 @@
     <div class="container card p-4">
         <div class="row">
             <div class="col-8">
-                <div class="row">
-                    {% for article in pagination %}
-                        <div class="col-md-12 pb-4">
-                            <h3 class="font-weight-bold pb-2">
-                                <a href="{{ path('article_show', {slug:article.slug}) }}" class="text-black" style="text-decoration: none;color:#0b2e13">
-                                    {{ article.title }}
-                                </a>
-                            </h3>
-                            <p>{{ article.content|truncate(400) }}</p>
-                            <div class="clearfix">
-                                <div class="float-left">
-                                    <a class="btn btn-sm btn-outline-info" href="{{ path('article_show', {slug:article.slug}) }}" role="button">Read more&nbsp;&nbsp;<i class="fa fa-angle-double-right"></i></a>
-                                </div>
-                                <div class="float-right">
-                                    <ul class="icons-inline text-info small">
-                                        <li>{{ article.createdAt|date('d.m.Y') }}</li>
-                                        <li><i class="fas fa-eye"></i><span>0</span></li>
-                                        <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
-                                        <li><i class="fas fa-thumbs-up"></i> {{ article.likes }}</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    {% else %}
-                        <h2>No articles found</h2>
-                    {% endfor %}
-                </div>
-                {{ knp_pagination_render(pagination, null, {}, {
-                    'position': 'centered',
-                    'rounded': true
-                }) }}
+                {{ include('article/include/article_list.html.twig') }}
             </div>
             <div class="col-4">
-                {% include 'sidebar.html.twig' %}
+                {% include 'layout/sidebar.html.twig' %}
             </div>
         </div>
     </div>
