added bookmark functionality

--- a/assets/css/component.scss
+++ b/assets/css/component.scss
@@ -12,7 +12,7 @@ ul.icons-inline {
             border-right: 0;
         }
 
-        > span {
+        span {
             padding-left: 8px;
         }
     }
