--- a/templates/user/layout.html.twig
+++ b/templates/user/layout.html.twig
@@ -18,7 +18,7 @@
             { title: 'Profile', route: 'user_profile' },
             { title: 'Articles', route: 'user_articles' },
             { title: 'Comments', route: 'user_comments' },
-            { title: 'Bookmarks', route: 'user_profile' },
+            { title: 'Bookmarks', route: 'user_bookmarks' },
             { title: 'Subscribe', route: 'user_profile' },
             { title: 'Followers', route: 'user_profile' },
         ] %}
