--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,11 @@
 body {
-    background-color: #efefefad;
+  background-color: #efefefad;
+}
+
+a {
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 @import 'helper';
