--- a/templates/article/include/article_list.html.twig
+++ b/templates/article/include/article_list.html.twig
@@ -14,6 +14,7 @@
                 <div class="float-right">
                     <ul class="icons-inline text-info small">
                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
+                        <li><i class="fas fa-bookmark"></i><span>0</span></li>
                         <li><i class="fas fa-eye"></i><span>0</span></li>
                         <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
                         <li><i class="fas fa-thumbs-up"></i> {{ article.likes }}</li>
