--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -18,20 +18,21 @@
                         {% endif %}
                         <ul class="icons-inline text-info small">
                             <li>{{ article.createdAt|date('H:i d.m.Y') }}</li>
+                            <li><a href="{{ path('article_bookmark', {id: article.id}) }}" class="text-info js-bookmark-article-btn {{ not is_granted('ROLE_USER') ? 'not-allowed' : '' }}"><i class="fas fa-bookmark"></i><span>0</span></a></li>
                             <li><i class="fas fa-eye"></i><span>0</span></li>
                             <li><i class="fas fa-comment"></i><span>{{ article.comments|length }}</span></li>
                         </ul>
                     </div>
                 </div>
-                <p>
-                    {{ article.content }}
-                </p>
+                <p>{{ article.content }}</p>
+                {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
                     <div class="btn-group btn-group-toggle js-like">
                         <a href="{{ path('article_like', {id: article.id}) }}" class="btn btn-sm btn-outline-success js-like-btn" data-type="1"><i class="fas fa-thumbs-up"></i> <span>{{ article.likes }}</span></a>
                         <a href="{{ path('article_dislike', {id: article.id}) }}" class="btn btn-sm btn-outline-danger js-like-btn" data-type="-1"><i class="fas fa-thumbs-down"></i> <span>{{ article.dislikes }}</span></a>
                     </div>
                 </div>
+                {% endif %}
                 <div class="pt-3">
                     {% include 'comment/index.html.twig' with {comments: article.comments, commentForm: commentForm} %}
                 </div>
@@ -49,6 +50,7 @@
         $(document).ready(function () {
             $('.js-like-btn').on('click', function (e) {
                 e.preventDefault();
+                if ($(this).hasClass('not-allowed')) return false;
 
                 let $this = $(this),
                     $btnGroup = $this.closest('.js-like'),
@@ -63,7 +65,23 @@
                     }
                     notify(data.type, data.message);
                 });
-            })
+            });
+
+            $('.js-bookmark-article-btn').on('click', function (e) {
+                e.preventDefault();
+                if ($(this).hasClass('not-allowed')) return false;
+
+                let $this = $(this),
+                    $bookmarkValue = $this.find('span')
+                ;
+
+                $.get($this.attr('href')).then(function(data) {
+                    if (data.type === 'success') {
+                        $bookmarkValue.html(data.data);
+                    }
+                    notify(data.type, data.message);
+                });
+            });
         });
     </script>
 {% endblock %}
