--- a/templates/layout/flashes.html.twig
+++ b/templates/layout/flashes.html.twig
@@ -1,10 +1,13 @@
 {% if app.session.flashbag.has('success') or app.session.flashbag.has('error') %}
     <script>
         {% for flash in app.session.flashbag.get('success') %}
-        notify('success', '{{ flash }}');
+            notify('success', '{{ flash }}');
         {% endfor %}
         {% for flash in app.session.flashbag.get('error') %}
-        notify('error', '{{ flash }}');
+            notify('error', '{{ flash }}');
+        {% endfor %}
+        {% for flash in app.session.flashbag.get('info') %}
+            notify('info', '{{ flash }}');
         {% endfor %}
     </script>
 {% endif %}
