--- a/assets/css/helper.scss
+++ b/assets/css/helper.scss
@@ -5,3 +5,12 @@
 .not-allowed {
   cursor: not-allowed;
 }
+
+.rank-rect {
+  display: inline-block;
+  border: 1px solid #eee;
+  padding: 2px 8px;
+  border-radius: 3px;
+  font-weight: bold;
+  font-size: 12px;
+}
