--- a/templates/article/include/article_list.html.twig
+++ b/templates/article/include/article_list.html.twig
@@ -13,6 +13,7 @@
                 </div>
                 <div class="float-right">
                     <ul class="icons-inline text-info small">
+                        <li>{{ article.author.firstname }} <a href="{{ path('user_profile', {email:article.author.username}) }}">@{{ article.author.username }}</a></li>
                         <li>{{ article.createdAt|date('d.m.Y') }}</li>
                         <li><i class="fas fa-bookmark"></i><span>0</span></li>
                         <li><i class="fas fa-eye"></i><span>0</span></li>
