--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -24,7 +24,7 @@
                         </ul>
                     </div>
                 </div>
-                <p>{{ article.content }}</p>
+                <p>{{ article.content|raw }}</p>
                 {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
                     <div class="btn-group btn-group-toggle js-like">
