some dir structure organizations

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,10 +4,10 @@
     <div class="container card p-4">
         <div class="row">
             <div class="col-8">
-                {{ include('article/include/article_list.html.twig') }}
+                {{ include('article/_include/_article_list.html.twig') }}
             </div>
             <div class="col-4">
-                {% include 'layout/sidebar.html.twig' %}
+                {% include '_include/_sidebar.html.twig' %}
             </div>
         </div>
     </div>
