--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col-4">
-                {% include 'layout/sidebar.html.twig' %}
+                {% include '_include/_sidebar.html.twig' %}
             </div>
         </div>
     </div>
