--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,7 +70,7 @@
             <script src="{{ asset('build/runtime.js') }}"></script>
             <script src="{{ asset('build/vendor.js') }}"></script>
             <script src="{{ asset('build/js/app.js') }}"></script>
-            {{ include('layout/flashes.html.twig') }}
+            {{ include('_include/_flashes.html.twig') }}
         {% endblock %}
     </body>
 </html>
