--- a/templates/user/_layout.html.twig
+++ b/templates/user/_layout.html.twig
@@ -55,12 +55,28 @@
             $('.js-unsubscribe').on('click', function (e) {
                 e.preventDefault();
 
-                let $this = $(this);
-                $.get($this.attr('href')).then(function(data) {
-                    if (data.type === 'success') {
-                        $this.closest('.unsubscribe-item').remove();
+                Swal({
+                    title: 'Are you sure?',
+                    // text: "You won't be able to revert this!",
+                    type: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Confirm'
+                }).then((result) => {
+                    if (result.value) {
+                        let $this = $(this);
+                        $.get($this.attr('href')).then(function(data) {
+                            if (data.type === 'success') {
+                                $this.closest('.unsubscribe-item').remove();
+                            }
+                            Swal(
+                                'Notification!',
+                                data.message,
+                                data.type
+                            );
+                        });
                     }
-                    notify(data.type, data.message);
                 });
             });
         });
