--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -24,6 +24,9 @@
                         </ul>
                     </div>
                 </div>
+                <p class="text-info small">
+                    <span class="border px-1 rounded">{{ article.tags|join('</span> <span class="border px-1 rounded">')|raw }}</span>
+                </p>
                 <p>{{ article.content|raw }}</p>
                 {% if is_granted('ROLE_USER') %}
                 <div class="d-flex justify-content-center">
