--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,13 +18,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Authors <span class="sr-only">(current)</span></a>
-                        </li>
+                        <li class="nav-item active"><a class="nav-link" href="#">Authors <span class="sr-only">(current)</span></a></li>
+                        <li><a class="nav-link" href="#">Tags</a></li>
                         {% if is_granted('ROLE_USER') %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('article_add') }}">New blog</a>
-                        </li>
+                            <li class="nav-item"><a class="nav-link" href="{{ path('article_add') }}">New blog</a></li>
                         {% endif %}
                     </ul>
                     <form class="form-inline my-2 my-lg-0" action="{{ path('article_index') }}">
