--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,7 +1,7 @@
 <div class="comments">
     <div class="comments__header pb-3">
         <div class="clearfix">
-            <h4 class="float-left text-primary">Comments</h4>
+            <h4 class="float-left text-dark">Comments</h4>
             <h6 class="float-right text-muted">{{ comments|length }} comments</h6>
         </div>
         {% if is_granted('ROLE_USER') %}
