--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,12 +37,12 @@
                         {% if is_granted('ROLE_USER') %}
                             <li class="nav-item dropdown mr-auto" style="margin-right: 75px;">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img class="nav-profile-img rounded-circle" src="//i.pravatar.cc/40">
+                                    <img class="nav-profile-img rounded-circle" src="{{ app.user.avatarPath }}">
                                     {{ app.user.firstname }}
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     {% if is_granted('ROLE_ADMIN') %}
-                                    <a class="dropdown-item" href="{{ path('easyadmin') }}">Admin panel</a>
+                                    <a class="dropdown-item" href="{{ path('easyadmin') }}">Admin</a>
                                     {% endif %}
                                     <a class="dropdown-item" href="{{ path('user_profile', {email:app.user.username}) }}">Profile</a>
                                     <span class="dropdown-divider"></span>
